--- a/projects.html
+++ b/projects.html
@@ -49,17 +49,19 @@
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
             <l>Courtney M<sup>c</sup>G</l><l>orrill</l>
           </h1>
-          <h3 style="margin-left: 150px;">Mud Tug</h3>
-          <p>Every fall, my sorority co-hosted Mud Tug, a 10 v. 10 tug-of-war tournament over Mud Pits. Since I have joined ZTA, we average ~1600 participants each year. <br>
-          For two years I was tasked with helping run the three tournament brackets, mens, womens, and co-ed. The first year I simply did what I was told. The second year, I took matters into my own hands<br>
-          With my strategy for running the brackets, we finished hours ahead of schedule, and had to brainstorm ideas of how to kill time and keep people entertained. <br>
-          I have now taken my bracket strategy for the event, and begun to turn it into an online application that will mingle with online registration. Online reigstration is also an entirely new feature for Mud Tug <br>
-          It's my goal to make signing up for Mud Tug so easy, you'd be crazy not to do it, and push us over the 2000 mark for total competitors. <br>
-          Below you will see images of the progress of the site. As new features are completed, I will be adding more images. <br>
-          <img>
-          <img>
-          <img>
-          </p>
+          <div style="margin-left: 150px;"></div>
+              <h3 >Mud Tug</h3>
+              <p>Every fall, my sorority co-hosted Mud Tug, a 10 v. 10 tug-of-war tournament over Mud Pits. Since I have joined ZTA, we average ~1600 participants each year. <br>
+              For two years I was tasked with helping run the three tournament brackets, mens, womens, and co-ed. The first year I simply did what I was told. The second year, I took matters into my own hands<br>
+              With my strategy for running the brackets, we finished hours ahead of schedule, and had to brainstorm ideas of how to kill time and keep people entertained. <br>
+              I have now taken my bracket strategy for the event, and begun to turn it into an online application that will mingle with online registration. Online reigstration is also an entirely new feature for Mud Tug <br>
+              It's my goal to make signing up for Mud Tug so easy, you'd be crazy not to do it, and push us over the 2000 mark for total competitors. <br>
+              Below you will see images of the progress of the site. As new features are completed, I will be adding more images. <br>
+              <img>
+              <img>
+              <img>
+              </p>
+          </div>
         </div>
       </div>
     </div>
