--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
               It's my goal to make signing up for Mud Tug so easy, you'd be crazy not to do it, and push us over the 2000 mark for total competitors. <br>
               Below you will see images of the progress of the site. As new features are completed, I will be adding more images. <br>
               </p>
-              <iframe src="http://mudtug.rit.edu" width="352" height="198"></iframe>
+              <iframe src="http://mudtug.rit.edu/" href="http://mudtug.rit.edu/" width="704" height="396" style="border:none"></iframe>
 
           </div>
         </div>
