--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="nav nav-sidebar">
             <li class="active"><a href="/">Courtney</a></li>
             <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/courses.html">Coursework</a></li>
+            <!--<li><a href="/courses.html">Coursework</a></li>-->
             <li><a href="/contact.html">Contact</a></li>
             <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
             <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>           <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
