--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
           <ul class="nav nav-sidebar">
             <li><a href="/">Courtney</a></li>
             <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/courses.html">Coursework</a></li>
+            <!--<li><a href="/courses.html">Coursework</a></li>-->
             <li class="active"><a href="/contact.html">Contact</a></li>
             <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
             <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
@@ -83,15 +83,15 @@
             <p>My first language on Twitter is sarcasm. My second is #hashtag. Giggle at my lame jokes or snicker at my daily misfortunes.</p>
           </div>
 
-          <a href="https://facebook.com/courtneymcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
-            <img class="media-object visible-desktop" width="100s]px" height="100px" src="images/facebook.png">
+          <a href="https://github.com/cmcgorrill" class="pull-left" style="margin-left: 150px; margin-right: 20px;">
+            <img class="media-object visible-desktop" width="100px" height="100px" src="images/git.png">
           </a>
           <div class="media-body">
-            <h3 class="media-heading">Friend me.</h3>
-            <a href=href="https://facebook.com/courtneymcgorrill">
-              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/facebook.png">
+            <h3 class="media-heading">Admire me.</h3>
+            <a href=href="https://github.com/cmcgorrill">
+              <img class="media-object hidden-desktop" width="100px" height="100px" src="images/git.png">
             </a>
-            <p>Still trying to kick the Facebook habit, but if you shoot me a message on here, I'm bound to see it within the hour.</p>
+            <p>Well, admire my code. Keep up with the sloppy code I throw together for school projects, and the occasional personal project.</p>
           </div>
 
         </div>
