--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
+    <link href="header.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -37,15 +38,17 @@
             <li><a href="/projects.html">Projects</a></li>
             <!--<li><a href="/courses.html">Coursework</a></li>-->
             <li><a href="/contact.html">Contact</a></li>
-            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png" width="30" height="30" style="vertical-align:middle; margin-left: 12px;"></a>
-            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>           <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
-            <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png" width="30" height="30" style="vertical-align:middle; margin-left: 2px;"></a>
           </ul>
         </div>
         <body>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
+            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
+            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
+            <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
+            <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
+          
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
           <a class="pull-left" style="margin-left: 50px; margin-right: 20px;">
