--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
           <h1 class="page-header" align="right">
             <img src="images/monogram.ico" height="100px" width="100px" align="left">
-            <a href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
-            <a href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
-            <a href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
-            <a href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
+            <a class="social" href="http://www.linkedin.com/in/courtneymcgorrill"><img src="images/linkedin.png"></a>
+            <a class="social" href="mailto:cmm5215@rit.edu" target="_top"><img src="images/gmail.png"></a>           
+            <a class="social" href="https://twitter.com/court_mcgort"><img src="images/twitter.png"></a>
+            <a class="social" href="https://facebook.com/courtneymcgorrill"><img src="images/facebook.png"></a>
           
             <l class="first-name">Courtney M<sup>c</sup>G</l><l class="last-name">orrill</l>
           </h1>
